# salespossible

./: .env.example  .gitignore  README.md  config.yaml  demo.py  index.html  main.py  plan.md  pyproject.toml  style.css
agent/: __init__.py  config.py  core.py  llm.py  setup_wizard.py
agent/gateway/: __init__.py  base.py  cli.py  telegram.py
agent/memory/: __init__.py  context_loader.py  persistent.py
agent/skills/: __init__.py  loader.py  manager.py
agent/tools/: __init__.py  code_exec.py  crm.py  email_tool.py  http_client.py  registry.py  search_tool.py
models/desktop_companion/: README.md  REALISTIC_WORKFLOW.md  companion_mobile.mtl  generation_prompts.txt
salesops_agent/: __init__.py  agent.py  models.py
scripts/: publish_space.py
skills/crm_lookup/: SKILL.md
skills/email_outreach/: SKILL.md
skills/followup/: SKILL.md
skills/meeting_prep/: SKILL.md
skills/pipeline_analysis/: SKILL.md
skills/prospecting/: SKILL.md
soul/: MEMORY.md  SOUL.md  STYLE.md
src/hermes_mini/: __init__.py  animations.py  audio_utils.py  check.py  config.py  hermes_client.py  listener.py  logbuffer.py  main.py  pipeline.py  speech.py  state.py  text_utils.py  vision.py
src/hermes_mini/static/: index.html
tests/: test_agent.py  test_audio_utils.py  test_hermes_client.py  test_listener.py  test_speech_minimax.py  test_state.py  test_streaming.py  test_text_utils.py  test_vision.py
