[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "salespossible"
version = "0.1.0"
description = "OpenClaw/Hermes Hybrid AI Sales Agent — identity-driven, self-improving, multi-platform"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }

dependencies = [
    # Anthropic Claude API (primary LLM)
    "anthropic>=0.40.0",
    # Async HTTP
    "httpx>=0.27.0",
    "aiohttp>=3.9.0",
    # Config & environment
    "pyyaml>=6.0.1",
    "python-dotenv>=1.0.0",
    "pydantic>=2.6.0",
    "pydantic-settings>=2.2.0",
    # Messaging gateways
    "python-telegram-bot>=21.0",
    "discord.py>=2.3.2",
    # Memory & storage
    "aiosqlite>=0.20.0",
    # CLI
    "rich>=13.7.0",
    "click>=8.1.7",
    # Scheduling (Hermes cron)
    "apscheduler>=3.10.4",
    # Web search
    "duckduckgo-search>=6.1.0",
    # Skills & markdown parsing
    "pyfrontmatter>=1.0.1",
    # Email
    "aiosmtplib>=3.0.0",
]

[project.optional-dependencies]
browser = [
    "playwright>=1.44.0",
]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
]

[project.scripts]
salespossible = "main:cli"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
