[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "hermes_mini"
version = "0.1.0"
authors = [{ name = "deployaibots" }]
description = "Run your self-hosted Hermes Agent as the brain of a Reachy Mini robot"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
dependencies = [
    "reachy-mini>=1.9.0",
    "numpy",
    "httpx>=0.27",
    "python-dotenv",
]

[dependency-groups]
dev = ["pytest"]

[project.scripts]
hermes-mini-check = "hermes_mini.check:main"

[project.entry-points."reachy_mini_apps"]
hermes_mini = "hermes_mini.main:HermesMiniApp"

[tool.setuptools]
package-dir = { "" = "src" }
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
hermes_mini = ["static/**/*"]
